--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
   },
   "homepage": "https://github.com/yagipy/runlive#readme",
   "devDependencies": {
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@monaco-editor/react": "^4.3.1",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.6.2",
