--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "framer-motion": "^6.2.8",
+    "monaco-editor": "^0.32.1",
+    "pyodide": "^0.19.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.6.2",
-    "vite": "^2.8.6"
+    "vite": "^2.8.6",
+    "y-webrtc": "^10.2.2",
+    "yjs": "^13.5.28"
   }
 }
