--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "target": "esnext",
     "esModuleInterop": true,
     "paths": {
-      "@/*": ["src/*"]
+      "@internal/*": ["src/*"]
     }
   }
 }
