--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@monaco-editor/react": "^4.3.1",
+    "@tanstack/react-location": "^3.7.4",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
