--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@tanstack/react-location": "^3.7.4",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^17.0.21",
+    "@types/pako": "^1.0.3",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "framer-motion": "^6.2.8",
     "monaco-editor": "^0.32.1",
+    "pako": "^2.0.4",
     "pyodide": "^0.19.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
