--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/pako": "^1.0.3",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "@types/uuid": "^8.3.4",
     "framer-motion": "^6.2.8",
     "monaco-editor": "^0.32.1",
     "pako": "^2.0.4",
@@ -33,7 +34,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.6.2",
+    "uuid": "^8.3.2",
     "vite": "^2.8.6",
+    "y-monaco": "^0.1.3",
     "y-webrtc": "^10.2.2",
     "yjs": "^13.5.28"
   }
